Verse Panel Hotfix  and new features added and subject first  parts

--- a/KuranX.App/App.xaml
+++ b/KuranX.App/App.xaml
@@ -24,6 +24,7 @@
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/verseMainPage.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/versePanelDesing.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/popupDesing.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/subjectDesing.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
