--- a/KuranX.App/Core/ResourceXaml/versePanelDesing.xaml
+++ b/KuranX.App/Core/ResourceXaml/versePanelDesing.xaml
@@ -164,7 +164,7 @@
         <Setter Property="BorderThickness" Value="0,0,0,0" />
         <Setter Property="BorderBrush" Value="{x:Null}" />
         <Setter Property="Background" Value="#FFF" />
-        <Setter Property="Margin" Value="0 0 25 0" />
+        <Setter Property="Margin" Value="12 0 12 0" />
         <Setter Property="Foreground"  Value="#1C1E2F" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="UseLayoutRounding" Value="True" />
@@ -326,6 +326,30 @@
         </Setter>
     </Style>
 
+    <Style x:Key="versesActionMainTabButtonSure" TargetType="Button" BasedOn="{StaticResource versesActionMainTabButton}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border x:Name="bg_temp" Padding="20,5,20,5" Style="{DynamicResource defaultBorderShadowEffect}" Background="{TemplateBinding Background}">
+                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+                            <Icon:PackIconFeatherIcons x:Name="ic_temp" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Foreground="{TemplateBinding Foreground}" Margin="0,0,5,0" Width="14" Height="14" VerticalAlignment="Center"  HorizontalAlignment="Center" />
+                            <TextBlock x:Name="txt_temp" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontFamily="{DynamicResource PoppinsRegular}" Foreground="{TemplateBinding Foreground}" />
+                        </StackPanel>
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="bg_temp" Property="Background" Value="#d63384" />
+                            <Setter TargetName="ic_temp" Property="Foreground" Value="#FFFFFF" />
+                            <Setter TargetName="txt_temp" Property="Foreground" Value="#FFFFFF" />
+                            <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style x:Key="versesActionMainTabButtonFeed" TargetType="Button" BasedOn="{StaticResource versesActionMainTabButton}">
         <Setter Property="Template">
             <Setter.Value>
@@ -357,6 +381,7 @@
         <Setter Property="BorderBrush" Value="{x:Null}" />
         <Setter Property="Background" Value="#FFF" />
         <Setter Property="Foreground"  Value="#1C1E2F" />
+        <Setter Property="Margin" Value="6 0 6 0" />
     </Style>
 
     <Style x:Key="versesNavButtonNext" TargetType="Button" BasedOn="{StaticResource versesNavContent}">
@@ -464,6 +489,44 @@
         </Style.Triggers>
     </Style>
 
+    <Style x:Key="versesNavButtonVActive" TargetType="CheckBox" BasedOn="{StaticResource versesActionMainBottomButton}">
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="UseLayoutRounding" Value="True" />
+        <Setter Property="Background" Value="#F0433A" />
+        <Setter Property="Foreground"  Value="#FFFFFF" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border x:Name="target1" Padding="25,5,25,5" Style="{DynamicResource defaultBorderShadowEffect}" Background="#F0433A" SnapsToDevicePixels="True" UseLayoutRounding="True">
+                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+                            <TextBlock x:Name="target2" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontFamily="{DynamicResource PoppinsMedium}" Foreground="#FFFFFF" />
+                            <TextBlock x:Name="target3" Text=" Ayet" FontFamily="{DynamicResource PoppinsMedium}" Foreground="#FFFFFF" />
+                        </StackPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="target1" Property="Background" Value="#F0433A" />
+                            <Setter TargetName="target2" Property="Foreground" Value="#FFFFFF" />
+                            <Setter TargetName="target3" Property="Foreground" Value="#FFFFFF" />
+                            <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsChecked" Value="True">
+                <Setter Property="Background" Value="#66E21F" />
+                <Setter Property="Foreground" Value="#FFFFFF" />
+            </Trigger>
+            <Trigger Property="IsChecked" Value="False">
+                <Setter Property="Background" Value="#FFFFFF" />
+                <Setter Property="Foreground" Value="#1C1E2F" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
     <Style x:Key="verseNavButtonItemsControl" TargetType="ItemsControl">
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="UseLayoutRounding" Value="True" />
@@ -497,7 +560,8 @@
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="verseBottomItemsControlBtn" TargetType="Button">
+    <Style x:Key="verseBottomItemsControlBtnTemp" TargetType="Button">
+
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="UseLayoutRounding" Value="True" />
         <Setter Property="MaxWidth" Value="210" />
@@ -508,18 +572,6 @@
         <Setter Property="Background" Value="#FFF" />
         <Setter Property="Foreground"  Value="#1C1E2F" />
         <Setter Property="Margin" Value="30 0 30 0" />
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <Border Background="{TemplateBinding Background}" Style="{DynamicResource defaultBorderShadowEffect}" Padding="20 5 20 5" SnapsToDevicePixels="True" UseLayoutRounding="True">
-                        <StackPanel Orientation="Horizontal">
-                            <Icon:PackIconJamIcons Kind="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Center" Width="22" Height="22" />
-                            <TextBlock Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" Width="Auto" MaxWidth="210" FontFamily="{DynamicResource PoppinsSemiBold}" TextWrapping="Wrap" Margin="10 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" />
-                        </StackPanel>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
@@ -528,6 +580,38 @@
                 <Setter Property="Cursor" Value="Hand" />
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    <Style x:Key="verseBottomItemsControlBtn" TargetType="Button" BasedOn="{StaticResource verseBottomItemsControlBtnTemp}">
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border Background="{TemplateBinding Background}" Style="{DynamicResource defaultBorderShadowEffect}" Padding="20 5 20 5" SnapsToDevicePixels="True" UseLayoutRounding="True">
+                        <StackPanel Orientation="Horizontal">
+                            <Icon:PackIconJamIcons Kind="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Center" Width="22" Height="22" />
+                            <TextBlock Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" Width="Auto" MaxWidth="210" FontFamily="{DynamicResource PoppinsSemiBold}" TextWrapping="Wrap" Margin="10 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" />
+                        </StackPanel>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="verseBottomItemsControlBtnGo" TargetType="Button" BasedOn="{StaticResource verseBottomItemsControlBtnTemp}">
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border Background="{TemplateBinding Background}" Style="{DynamicResource defaultBorderShadowEffect}" Padding="20 5 20 5" SnapsToDevicePixels="True" UseLayoutRounding="True">
+                        <StackPanel Orientation="Horizontal">
+                            <Icon:PackIconEvaIcons Kind="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Center" Width="18" Height="18" />
+                            <TextBlock TextAlignment="Center" Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" Width="Auto" MaxWidth="210" FontFamily="{DynamicResource PoppinsSemiBold}" TextWrapping="Wrap" Margin="10 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                        </StackPanel>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
@@ -604,6 +688,22 @@
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Foreground" Value="#F0433A" />
                 <Setter Property="Cursor" Value="Hand" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="stackpanelUseAniEffect" TargetType="StackPanel">
+
+        <Style.Triggers>
+            <Trigger Property="Visibility" Value="Visible">
+                <Trigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                             From="0.0" To="1.0" Duration="0:0:0.3" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.EnterActions>
             </Trigger>
         </Style.Triggers>
     </Style>
